Add alembscript workspace and adds universe searching

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,21 @@
 [workspace]
 resolver = "3"
-members = ["crates/wmms/wmms-aspects", "crates/wmms/wmms-assets","crates/wmms/wmms-core", "crates/wmms/wmms-mechanics", "crates/wmms/wmms-model", "crates/wmms/wmms-runtime", "crates/wmms/wmms-signals", "crates/wmms/wmms-storage", "crates/wmms/wmms-toolings", "crates/world-cli"]
+members = [
+    "crates/alembscript/alembscript-compiler", 
+    "crates/alembscript/alembscript-runtime",
+    "crates/alembscript/alembscript-syntax",
+    "crates/wmms/wmms-aspects",
+    "crates/wmms/wmms-assets",
+    "crates/wmms/wmms-core",
+    "crates/wmms/wmms-mechanics",
+    "crates/wmms/wmms-model",
+    "crates/wmms/wmms-runtime", 
+    "crates/wmms/wmms-signals", 
+    "crates/wmms/wmms-storage", 
+    "crates/wmms/wmms-toolings", 
+    "crates/world-cli", 
+    "crates/world-universe"
+    ]
 
 [workspace.package]
 edition = "2024"
@@ -14,19 +29,22 @@ license = "AGPL-3.0-only"
 world-cli = { path = "crates/world-cli" }
 
 # wmms crates
-wmms-core = { path = "crates/wmms-core" }
-wmms-runtime = { path = "crates/wmms-runtime" }
-wmms-signals = { path = "crates/wmms-signals" }
-wmms-storage = { path = "crates/wmms-storage" }
-wmms-toolings = { path = "crates/wmms-toolings" }
-wmms-model = { path = "crates/wmms-wmms-model" }
-wmms-mechanics = { path = "crates/wmms-wmms-mechanics" }
-wmms-aspects = { path = "crates/wmms-wmms-aspects" }
-wmms-assets = { path = "crates/wmms-wmms-assets" }
+wmms-core = { path = "crates/wmms/wmms-core" }
+wmms-runtime = { path = "crates/wmms/wmms-runtime" }
+wmms-signals = { path = "crates/wmms/wmms-signals" }
+wmms-storage = { path = "crates/wmms/wmms-storage" }
+wmms-toolings = { path = "crates/wmms/wmms-toolings" }
+wmms-model = { path = "crates/wmms/wmms-model" }
+wmms-mechanics = { path = "crates/wmms/wmms-mechanics" }
+wmms-aspects = { path = "crates/wmms/wmms-aspects" }
+wmms-assets = { path = "crates/wmms/wmms-assets" }
+
+# alembscript crates
+alembscript-compiler = { path = "crates/alembscript/alembscript-compiler" }
+alembscript-runtime = { path = "crates/alembscript/alembscript-runtime" }
+alembscript-syntax = { path = "crates/alembscript/alembscript-syntax" }
 
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.149"
-tokio = { version = "1.49.0", features = ["full"] }
 crossterm = "0.29.0"
 ratatui = "0.30.0"
 
