Adds rand and rand_chacha deps

--- a/crates/wmms/wmms-core/Cargo.toml
+++ b/crates/wmms/wmms-core/Cargo.toml
@@ -10,3 +10,5 @@ thiserror = {workspace = true}
 miette = {workspace = true}
 blake3 = {workspace = true}
 anyhow = {workspace = true}
+rand = {workspace = true}
+rand_chacha = {workspace = true}
