--- a/crates/wmms/wmms-core/Cargo.toml
+++ b/crates/wmms/wmms-core/Cargo.toml
@@ -12,3 +12,4 @@ blake3 = {workspace = true}
 anyhow = {workspace = true}
 rand = {workspace = true}
 rand_chacha = {workspace = true}
+num-traits = {workspace = true}
