--- a/crates/wmms/wmms-model/Cargo.toml
+++ b/crates/wmms/wmms-model/Cargo.toml
@@ -6,3 +6,7 @@ authors.workspace = true
 license.workspace = true
 
 [dependencies]
+wmms-core = { workspace = true }
+wmms-aspects = { workspace = true }
+
+roaring = { workspace = true }
