Refactor ID handling to unify IdHash and IdType with id64 or id128 features; streamline ID definition macros and enhance type conversions

--- a/crates/wmms/wmms-core/Cargo.toml
+++ b/crates/wmms/wmms-core/Cargo.toml
@@ -5,6 +5,11 @@ version.workspace = true
 authors.workspace = true
 license.workspace = true
 
+[features]
+default = ["id64"]
+id64 = []
+id128 = []
+
 [dependencies]
 thiserror = {workspace = true}
 miette = {workspace = true}
